Fix: scrollbar behaviour, various style adjustments

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,3 +89,17 @@
         display: none;
     }
 }
+
+@media (min-width: 640px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  body {
+    -ms-overflow-style: none;
+  }
+
+  body {
+    scrollbar-width: none;
+  }
+}
